Fix checkbox vertical misalignment by changing row height.

--- a/src/app/pages/crag/crag-routes/crag-routes.component.scss
+++ b/src/app/pages/crag/crag-routes/crag-routes.component.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: row;
   padding: 6px 2px 6px 16px;
-  min-height: 40px;
+  min-height: 43px;
 
   &.header {
     cursor: default;
@@ -17,11 +17,8 @@
     }
   }
 
-  .mat-checkbox ::ng-deep {
-    .mat-checkbox-ripple {
-      height: 39px;
-      width: 39px;
-    }
+  .mat-checkbox {
+    margin-top: -2px;
   }
 }
 
